refactor: rename methods and variables for improved clarity
- Renamed handleSuiteAndReverseOptions to applySpecialRuleIfEligible
- Renamed activateSpecialRule to determineAndApplySpecialRule
- Renamed validatePlayConditions to checkPlayConditions
- Renamed validateMoveConditions to checkMoveConditions
- Renamed handlePassLogic to processPassTurn
- Renamed suiteOption to isSpecialRuleActivated
- Renamed orNothingConditionActive to isForcedRankActive
- Renamed currentSuiteRank to activeSuiteRank
- Renamed currentReverseRank to activeReverseRank

Improved readability and naming consistency across the class.